--- a/zfp/PKGBUILD
+++ b/zfp/PKGBUILD
@@ -3,9 +3,9 @@
 
 pkgname=zfp
 pkgver=0.5.5
-pkgrel=3
+pkgrel=5
 pkgdesc="Compressed numerical arrays that support high-speed random access"
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://computing.llnl.gov/projects/floating-point-compression"
 license=(BSD)
 depends=(glibc gcc-libs)
