--- a/r/PKGBUILD
+++ b/r/PKGBUILD
@@ -6,16 +6,13 @@
 
 pkgname=r
 pkgver=4.1.2
-pkgrel=1
+pkgrel=2
 pkgdesc="Language and environment for statistical computing and graphics"
 arch=(x86_64 powerpc64le powerpc riscv64)
 license=('GPL')
 url='https://www.r-project.org/'
 depends=('lapack' 'libtiff' 'pcre2' 'perl' 'libxmu' 'pango' 'zip' 'unzip' 'curl' 'icu' 'which')
-makedepends=('gcc-fortran' 'tk' 'texlive-core')
-makedepends_powerpc=('jdk-openjk')
-makedepends_powerpc64le=('jdk-openjk')
-makedepends_x86_64=('jdk-openjk')
+makedepends=('java-environment>=11' 'gcc-fortran' 'tk' 'texlive-core')
 optdepends=('tk: tcl/tk interface'
             'texlive-bin: latex sty files'
             'gcc-fortran: needed to compile some CRAN packages'
