--- a/libpgm/PKGBUILD
+++ b/libpgm/PKGBUILD
@@ -8,7 +8,7 @@ pkgver=5.3.128
 _pkgver="${pkgver//./-}"
 pkgrel=1
 pkgdesc="OpenPGM: implementation of the Pragmatic General Multicast (PGM, RFC3208)"
-arch=( x86_64 powerpc64le powerpc )
+arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://www.freshports.org/net/openpgm/'
 license=('LGPL2.1')
 depends=('glibc')
