--- a/pugixml/PKGBUILD
+++ b/pugixml/PKGBUILD
@@ -7,7 +7,7 @@ pkgname=pugixml
 pkgver=1.11.4
 pkgrel=1
 pkgdesc="Light-weight, simple and fast XML parser for C++ with XPath support"
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://pugixml.org"
 license=(MIT)
 depends=(gcc-libs)
