--- a/geos/PKGBUILD
+++ b/geos/PKGBUILD
@@ -8,7 +8,7 @@ pkgname=geos
 pkgver=3.9.1
 pkgrel=1
 pkgdesc="C++ port of the Java Topology Suite"
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://trac.osgeo.org/geos/"
 license=('LGPL')
 depends=('gcc-libs' 'bash')
