--- a/libfreexl/PKGBUILD
+++ b/libfreexl/PKGBUILD
@@ -7,7 +7,7 @@ pkgname=libfreexl
 pkgver=1.0.6
 pkgrel=1
 pkgdesc="Library to extract valid data from within an Excel (.xls) spreadsheet"
-arch=( x86_64 powerpc64le powerpc )
+arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://www.gaia-gis.it/fossil/freexl/index"
 license=('MPL' 'GPL' 'LGPL')
 depends=('glibc')
