--- a/xerces-c/PKGBUILD
+++ b/xerces-c/PKGBUILD
@@ -6,9 +6,9 @@
 
 pkgname=xerces-c
 pkgver=3.2.3
-pkgrel=4
+pkgrel=5
 pkgdesc="A validating XML parser written in a portable subset of C++"
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://xerces.apache.org/xerces-c/"
 license=('APACHE')
 depends=('gcc-libs' 'curl' 'libnsl')
