--- a/speech-dispatcher/PKGBUILD
+++ b/speech-dispatcher/PKGBUILD
@@ -1,67 +1,55 @@
 # POWER Maintainer: Alexander Baldeck <alex.bldck@gmail.com>
+# Maintainer: Alexander Epaneshnikov <alex19ep@archlinux.org>
 # Maintainer: Sven-Hendrik Haase <svenstaro@gmail.com>
+
 pkgbase=speech-dispatcher
 pkgname=(speech-dispatcher libspeechd)
-pkgver=0.10.2
+pkgver=0.11.1
 pkgrel=1
-arch=( x86_64 powerpc64le powerpc )
+arch=(x86_64 powerpc64le powerpc)
 pkgdesc="High-level device independent layer for speech synthesis interface"
-url="http://www.freebsoft.org/speechd"
+url='http://www.freebsoft.org/speechd'
 license=('GPL2' 'FDL')
-makedepends=('intltool' 'espeak-ng' 'libltdl' 'python-xdg' 'dotconf' 'libpulse' 'libao')
-source=("https://github.com/brailcom/speechd/releases/download/${pkgver}/speech-dispatcher-${pkgver}.tar.gz"
-        'speech-dispatcherd.service')
-sha512sums=('9af240d9a15062489c170440911e9d148d0d113a0f22211f1496e9754345a5d079e160962d666801322dc2efa1134f8b5e209c0183d93a1f0896705dc6011122'
-            '73eb563003b03f4836b17af66335664050d1dc3bd8434be368cd09ff8933aa2adc4bd17c4ce5c1bbbd406a0b0880191426a679fa05eac0a30f4005eaeeb47340')
-
-prepare() {
-  cd ${pkgname}-${pkgver}
-
-  # Disabled due to bug: https://bugs.archlinux.org/task/35700
-  sed -i "s/cicero //g" configure.ac
-  sed -i "s/sd_cicero//g" src/modules/Makefile.am
-}
+makedepends=('glib2' 'intltool' 'espeak-ng' 'libtool' 'python-pyxdg' 'dotconf' 'libpulse' 'libao')
+source=("https://github.com/brailcom/speechd/releases/download/${pkgver}/speech-dispatcher-${pkgver}.tar.gz")
+sha512sums=('859911d7db5660423bc7911eacbe8e7a9c3104df97478cbbca48ca5fd6ec018113172d49bc66781680433c77b4d2af43578c9b0f11409e2ba7ac618deb31d7cf')
 
 build() {
   cd ${pkgname}-${pkgver}
 
-  CFLAGS+=' -fcommon' # https://wiki.gentoo.org/wiki/Gcc_10_porting_notes/fno_common
-
-  ./configure --prefix=/usr \
-    --enable-shared \
-    --sysconfdir=/etc \
-    --without-flite
+  ./configure --prefix=/usr --sysconfdir=/etc \
+    --disable-static \
+    --libexecdir=/usr/lib/speech-dispatcher/ \
+    --with-ibmtts=no --with-kali=no --with-baratinoo=no \
+    --with-voxin=no --without-flite
   make
 }
 
 package_speech-dispatcher() {
-  depends=("libspeechd=$pkgver-$pkgrel" 'libltdl' 'python-xdg' 'dotconf' 'libpulse' 'libao')
+  depends=("libspeechd=$pkgver-$pkgrel" 'python-pyxdg' 'dotconf' 'libpulse' 'libao')
   optdepends=('festival: Speech output using Festival'
               'espeak-ng: Speech output using ESpeak-ng'
               'pulseaudio: PulseAudio support')
-  backup=(etc/speech-dispatcher/clients/emacs.conf
-  	      etc/speech-dispatcher/modules/ibmtts.conf
-  	      etc/speech-dispatcher/modules/espeak-generic.conf
-  	      etc/speech-dispatcher/modules/espeak.conf
-  	      etc/speech-dispatcher/modules/espeak-ng.conf
-  	      etc/speech-dispatcher/modules/swift-generic.conf
-  	      etc/speech-dispatcher/modules/festival.conf
-  	      etc/speech-dispatcher/modules/cicero.conf
-  	      etc/speech-dispatcher/modules/espeak-mbrola-generic.conf
-  	      etc/speech-dispatcher/modules/espeak-ng-mbrola-generic.conf
-  	      etc/speech-dispatcher/modules/dtk-generic.conf
-  	      etc/speech-dispatcher/modules/llia_phon-generic.conf
-  	      etc/speech-dispatcher/modules/ivona.conf
-  	      etc/speech-dispatcher/modules/epos-generic.conf
-          etc/speech-dispatcher/modules/flite.conf
-          etc/speech-dispatcher/modules/pico-generic.conf
-          etc/speech-dispatcher/speechd.conf)
+  backup=('etc/speech-dispatcher/clients/emacs.conf'
+          'etc/speech-dispatcher/modules/dtk-generic.conf'
+          'etc/speech-dispatcher/modules/epos-generic.conf'
+          'etc/speech-dispatcher/modules/espeak-ng.conf'
+          'etc/speech-dispatcher/modules/espeak-ng-mbrola.conf'
+          'etc/speech-dispatcher/modules/espeak-ng-mbrola-generic.conf'
+          'etc/speech-dispatcher/modules/festival.conf'
+          'etc/speech-dispatcher/modules/llia_phon-generic.conf'
+          'etc/speech-dispatcher/modules/mary-generic.conf'
+          'etc/speech-dispatcher/modules/swift-generic.conf'
+          'etc/speech-dispatcher/speechd.conf')
 
   cd ${pkgname}-${pkgver}
   make DESTDIR="${pkgdir}" install
 
-  install -Dm644 "${srcdir}"/speech-dispatcherd.service "${pkgdir}/usr/lib/systemd/system/speech-dispatcherd.service"
-  install -d "${pkgdir}/var/log/speech-dispatcher"
+  rm "${pkgdir}/etc/speech-dispatcher/modules/cicero.conf"
+  rm "${pkgdir}/etc/speech-dispatcher/modules/espeak.conf"
+  rm "${pkgdir}/etc/speech-dispatcher/modules/espeak-mbrola-generic.conf"
+  rm "${pkgdir}/etc/speech-dispatcher/modules/flite.conf"
+  rm "${pkgdir}/usr/lib/speech-dispatcher/speech-dispatcher-modules/sd_cicero"
 
   sed -i 's|includedir=.*|includedir=${prefix}/include/speech-dispatcher|g' "${pkgdir}/usr/lib/pkgconfig/speech-dispatcher.pc"
 
@@ -71,6 +59,7 @@ package_speech-dispatcher() {
 }
 
 package_libspeechd() {
+  depends=('glib2' 'libtool')
   mkdir -p "${pkgdir}"/usr/lib
 
   mv "${srcdir}"/libspeechd/usr/include "${pkgdir}"/usr
