--- a/gdal/PKGBUILD
+++ b/gdal/PKGBUILD
@@ -8,7 +8,8 @@ pkgname=('gdal' 'python-gdal')
 pkgver=3.3.1
 pkgrel=8
 pkgdesc="A translator library for raster geospatial data formats"
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
+arch=(powerpc64le powerpc)
 url="https://gdal.org/"
 license=('custom')
 depends=('curl' 'geos' 'giflib' 'hdf5' 'libgeotiff' 'libjpeg-turbo' 'libpng' 'libspatialite' 'libtiff' 'netcdf'
