--- a/anthy/PKGBUILD
+++ b/anthy/PKGBUILD
@@ -8,10 +8,9 @@ pkgver=9100h
 _filecode=37536
 pkgrel=6
 pkgdesc='Hiragana text to Kana Kanji mixed text Japanese input method'
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://es.osdn.net/projects/anthy/'
 license=('LGPL' 'GPL')
-source=("http://dl.sourceforge.net/anthy/${_filecode}/${pkgname}-${pkgver}.tar.gz")
 source=("https://osdn.mirror.constant.com//anthy/${_filecode}/anthy-${pkgver}.tar.gz")
 sha512sums=('315ebd9e1af208f3ecaeaa13620213b35f004e47edb54e60c3e02c2997444cd2326cc58b725dd2d0bd6a723130884d946ea193ea3d92418082256b59ecc8d88b')
 
