--- a/libotf/PKGBUILD
+++ b/libotf/PKGBUILD
@@ -8,7 +8,7 @@ pkgrel=3
 pkgdesc='OpenType Font library'
 url='https://www.nongnu.org/m17n/'
 license=('LGPL')
-arch=( x86_64 powerpc64le powerpc )
+arch=(x86_64 powerpc64le powerpc riscv64)
 depends=('libxaw' 'freetype2')
 source=("https://download.savannah.gnu.org/releases/m17n/${pkgname}-${pkgver}.tar.gz"
         'replace-freetype-config.patch')
@@ -23,7 +23,8 @@ prepare() {
 build() {
 	cd "${srcdir}/${pkgname}-${pkgver}"
 	autoreconf -i
-	./configure --prefix=/usr
+	./configure --prefix=/usr \
+                    --build=${CHOST}
 	make
 }
 
