--- a/ispell/PKGBUILD
+++ b/ispell/PKGBUILD
@@ -6,7 +6,7 @@ pkgname=ispell
 pkgver=3.4.04
 pkgrel=1
 pkgdesc="An interactive spell-checking program for Unix"
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://www.cs.hmc.edu/~geoff/ispell.html"
 license=('BSD')
 depends=('ncurses' 'sh')
