--- a/emacs/PKGBUILD
+++ b/emacs/PKGBUILD
@@ -4,16 +4,23 @@
 
 pkgname=emacs
 pkgver=27.2
-pkgrel=1
+pkgrel=1.1
 pkgdesc="The extensible, customizable, self-documenting real-time display editor"
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://www.gnu.org/software/emacs/emacs.html"
 license=('GPL3')
 depends=('librsvg' 'gpm' 'giflib' 'libxpm' 'libotf' 'm17n-lib' 'gtk3' 'hicolor-icon-theme' 'desktop-file-utils' 'alsa-lib' 'gnutls' 'jansson' 'cairo' 'harfbuzz')
 validpgpkeys=('E6C9029C363AD41D787A8EBB91C1262F01EB8D39' '28D3BED851FDF3AB57FEF93C233587A47C207910')
-source=(https://ftp.gnu.org/gnu/emacs/$pkgname-$pkgver.tar.xz{,.sig})
-sha1sums=('8d18e2bfb6e28cf060ce7587290954e9c582aa25'
-          'SKIP')
+source=(https://ftp.gnu.org/gnu/emacs/$pkgname-$pkgver.tar.xz{,.sig}
+        emacs-glibc-2.34.patch)
+sha256sums=('b4a7cc4e78e63f378624e0919215b910af5bb2a0afc819fad298272e9f40c1b9'
+            'SKIP'
+            '619e91928b48b0a679622777d9e7f243bc0d7e1b6a9f01d3ab4c55d1d19d2d06')
+
+prepare() {
+  cd "$srcdir"/$pkgname-$pkgver
+  patch -Np1 -i ${srcdir}/emacs-glibc-2.34.patch
+}
 
 build() {
   cd "$srcdir"/$pkgname-$pkgver
