--- a/libcerf/PKGBUILD
+++ b/libcerf/PKGBUILD
@@ -6,7 +6,7 @@ epoch=1
 pkgver=1.17
 pkgrel=1
 pkgdesc='Self-contained numeric library that provides an efficient and accurate implementation of complex error functions'
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://jugit.fz-juelich.de/mlz/libcerf/'
 license=(custom)
 depends=(glibc)
