--- a/qt5/qt5-svg/PKGBUILD
+++ b/qt5/qt5-svg/PKGBUILD
@@ -4,10 +4,10 @@
 # Contributor: Andrea Scarpino <andrea@archlinux.org>
 
 pkgname=qt5-svg
-pkgver=5.15.2+kde+r13
+pkgver=5.15.2+kde+r16
 pkgrel=1
-_commit=24128cdf8bef53eddf31a5709bbbc46293006b1c
-arch=(x86_64 powerpc64le powerpc)
+_commit=728012f7762ecd5762d493f8796907c6456f31e7
+arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://www.qt.io'
 license=('GPL3' 'LGPL3' 'FDL' 'custom')
 pkgdesc='Classes for displaying the contents of SVG files'
