--- a/gnuplot/PKGBUILD
+++ b/gnuplot/PKGBUILD
@@ -4,17 +4,17 @@
 # Contributor: Tom Newsom <Jeepster@gmx.co.uk>
 
 pkgname=gnuplot
-pkgver=5.4.2
+pkgver=5.4.3
 pkgrel=1
 pkgdesc="Plotting package which outputs to X11, PostScript, PNG, GIF, and others" 
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url="http://www.gnuplot.info" 
 license=('custom') 
 depends=('readline' 'gd' 'wxgtk3' 'cairo' 'libjpeg' 'lua' 'qt5-svg' 'gnutls' 'libcerf') 
 makedepends=('texinfo' 'texlive-core' 'emacs' 'texlive-latexextra' 'qt5-tools')
 source=("https://downloads.sourceforge.net/sourceforge/$pkgname/$pkgname-$pkgver.tar.gz"
         "lua53_compat.patch")
-sha1sums=('2e076b29f38bfcb841cb5eb3377fd1a469ced1ac'
+sha1sums=('c4b60fd7a700b22fa62b14829cbb0e17911627c9'
           '9005fa9e4da91ceedb8ccd1d761866e7b064f8b1')
 
 prepare() {
