--- a/qt6/qt6-base/PKGBUILD
+++ b/qt6/qt6-base/PKGBUILD
@@ -6,7 +6,7 @@
 pkgname=qt6-base
 _qtver=6.2.2
 pkgver=${_qtver/-/}
-pkgrel=1
+pkgrel=5
 arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://www.qt.io'
 license=(GPL3 LGPL3 FDL custom)
@@ -16,7 +16,9 @@ depends=(libjpeg-turbo xcb-util-keysyms xcb-util-cursor libgl fontconfig xdg-uti
          tslib libinput libxkbcommon-x11 libcups double-conversion brotli md4c)
 makedepends=(cmake ninja mariadb-libs unixodbc postgresql alsa-lib gst-plugins-base-libs
              gtk3 libpulse cups freetds xmlstarlet)
-depends_x86_64=(libb2)
+depends_powerpc=(libproxy)
+depends_powerpc64le=(libproxy)
+depends_x86_64=(libb2 libproxy)
 makedepends_x86_64=(libfbclient)
 optdepends=('postgresql-libs: PostgreSQL driver'
             'mariadb-libs: MariaDB driver'
@@ -30,23 +32,24 @@ _pkgfn="${pkgname/6-/}-everywhere-src-$_qtver"
 source=(https://download.qt.io/official_releases/qt/${pkgver%.*}/$_qtver/submodules/$_pkgfn.tar.xz
         qt6-base-cflags.patch
         qt6-base-nostrip.patch
-        qtbug-96392.patch::https://code.qt.io/cgit/qt/qtbase.git/patch/?id=5c7b3db32bf383afa00050370222f39e0f3083ca
-        libatomic.patch)
-sha256sums=('fdfff0716d093bcb6bcd53746ce1d3c9701a6bf3326d47813866d43949b47769'
-            'cf707cd970650f8b60f8897692b36708ded9ba116723ec8fcd885576783fe85c'
+        qtbug-97908.patch::https://code.qt.io/cgit/qt/qtbase.git/patch/?id=9b7f7115)
+sha256sums=('85ab9180180c2eaf84cd11ae4c6d5a6a69f2f8fd7260aaccfd91a3e7e7232c1a'
+            '5411edbe215c24b30448fac69bd0ba7c882f545e8cf05027b2b6e2227abc5e78'
             '4b93f6a79039e676a56f9d6990a324a64a36f143916065973ded89adc621e094'
-            '4c999415cf813591efa2e5bc5f692a4a7a822ad94837a01ef9c802f96c3ebd90'
-            '433dd8eed95c89d068be99b47a13c4985d1c564d0ad01c0bb1004b39cc3d6e27')
+            '06590303498a10950408d26f027928ec12019fe631237d1862c2d720f1d331bb')
 
 prepare() {
   patch -d $_pkgfn -p1 < qt6-base-cflags.patch # Use system CFLAGS
   patch -d $_pkgfn -p1 < qt6-base-nostrip.patch # Don't strip binaries with qmake
-  patch -d $_pkgfn -p1 < qtbug-96392.patch # https://bugreports.qt.io/browse/QTBUG-96392
-
-  patch -d $_pkgfn -p1 < libatomic.patch
+  patch -d $_pkgfn -p1 < qtbug-97908.patch # Fix scrolling with PgUp/PgDown keys
 }
 
 build() {
+  case "${CARCH}" in
+    powerpc|riscv64) _cmake_options='-DCMAKE_CXX_FLAGS="-latomic" -DCMAKE_INTERPROCEDURAL_OPTIMIZATION=OFF' ;;
+    powerpc64le|x86_64) _cmake_options='-DCMAKE_INTERPROCEDURAL_OPTIMIZATION=ON' ;;
+  esac
+
   cmake -B build -S $_pkgfn -G Ninja \
     -DCMAKE_INSTALL_PREFIX=/usr \
     -DINSTALL_BINDIR=lib/qt6/bin \
@@ -60,8 +63,7 @@ build() {
     -DINSTALL_EXAMPLESDIR=share/doc/qt6/examples \
     -DQT_FEATURE_journald=ON \
     -DQT_FEATURE_openssl_linked=ON \
-    -DQT_FEATURE_system_sqlite=ON \
-    -DBUILD_WITH_PCH=OFF
+    -DQT_FEATURE_system_sqlite=ON $(_cmake_options)
   cmake --build build
 }
 
