--- a/qt6/qt6-shadertools/PKGBUILD
+++ b/qt6/qt6-shadertools/PKGBUILD
@@ -4,10 +4,10 @@
 # Contributor: Andrea Scarpino <andrea@archlinux.org>
 
 pkgname=qt6-shadertools
-_qtver=6.2.0
+_qtver=6.2.2
 pkgver=${_qtver/-/}
 pkgrel=1
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://www.qt.io'
 license=(GPL3)
 pkgdesc='Provides functionality for the shader pipeline that allows Qt Quick to operate on Vulkan, Metal, and Direct3D, in addition to OpenGL'
@@ -16,15 +16,10 @@ makedepends=(cmake ninja)
 groups=(qt6)
 _pkgfn="${pkgname/6-/}-everywhere-src-$_qtver"
 source=(https://download.qt.io/official_releases/qt/${pkgver%.*}/$_qtver/submodules/$_pkgfn.tar.xz)
-sha256sums=('5f66d43610a3a6739fc360d836a2c045135107c0ecd40eb3ed18ce5f3dd79c42')
+sha256sums=('f97505e72358c1fa2a2131c3a9a5b3497a2b9ea65b75a5beaf7f46c4b56a89e5')
 
 build() {
-  case "${CARCH}" in
-    powerpc) PLATFORM_CMAKE_FLAGS="-DNOGLSL=ON -DNOHLSL=ON -DNOMSL=ON" ;;
-  esac
-
-
-  cmake -B build -S $_pkgfn -G Ninja ${PLATFORM_CMAKE_FLAGS}
+  cmake -B build -S $_pkgfn -G Ninja
   cmake --build build
 }
 
