--- a/glslang/PKGBUILD
+++ b/glslang/PKGBUILD
@@ -4,7 +4,7 @@
 # Careful when upgrading this package! It usually breaks ABI without bumping soname.
 pkgname=glslang
 pkgver=11.7.1
-pkgrel=3
+pkgrel=3.1
 pkgdesc='OpenGL and OpenGL ES shader front end and validator'
 arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://github.com/KhronosGroup/glslang'
@@ -15,7 +15,8 @@ options=('staticlibs')
 # Get the commits from known_good.json for every release
 source=(${pkgname}-${pkgver}.tar.gz::https://github.com/KhronosGroup/glslang/archive/${pkgver}.tar.gz
         git+https://github.com/KhronosGroup/SPIRV-Tools#commit=1fbed83c8aab8517d821fcb4164c08567951938f
-        git+https://github.com/KhronosGroup/SPIRV-Headers#commit=449bc986ba6f4c5e10e32828783f9daef2a77644)
+        git+https://github.com/KhronosGroup/SPIRV-Headers#commit=449bc986ba6f4c5e10e32828783f9daef2a77644
+        ${pkgname}-pr2800.patch::https://patch-diff.githubusercontent.com/raw/KhronosGroup/glslang/pull/2800.patch)
 sha256sums=('ab2e2ddc507bb418b9227cbe6f443eb06e89e2387944f42026d82c0b4ef79b0a'
             'SKIP'
             'SKIP')
@@ -27,6 +28,10 @@ prepare() {
   # libraries.
   cp -r SPIRV-Tools ${pkgname}-${pkgver}/External/spirv-tools
   cp -r SPIRV-Headers ${pkgname}-${pkgver}/External/spirv-tools/external/spirv-headers
+
+  cd ${pkgname}-${pkgver}
+  # address QTBUG-93101
+  patch -Np1 -i ${srcdir}/${pkgname}-pr2800.patch
 }
 
 build() {
@@ -67,3 +72,7 @@ package() {
 }
 
 # vim: ts=2 sw=2 et:
+sha256sums=('ab2e2ddc507bb418b9227cbe6f443eb06e89e2387944f42026d82c0b4ef79b0a'
+            'SKIP'
+            'SKIP'
+            'cf8dbb4b086a41b54eb8b18a3ad769a1144e9b142907a5139165ea5778b91c86')
