--- a/poppler/PKGBUILD
+++ b/poppler/PKGBUILD
@@ -4,22 +4,19 @@
 
 pkgbase=poppler
 pkgname=('poppler' 'poppler-glib' 'poppler-qt5' 'poppler-qt6')
-pkgver=21.11.0
+pkgver=22.01.0
 pkgrel=1
 arch=(x86_64 powerpc64le powerpc riscv64)
 license=('GPL')
-makedepends=('libjpeg' 'gcc-libs' 'cairo' 'fontconfig' 'openjpeg2' 'pkgconfig' 'lcms2' 
-             'gobject-introspection' 'icu' 'git' 'nss' 'gtk-doc' 'curl' 'poppler-data'
+makedepends=('libjpeg' 'gcc-libs' 'cairo' 'fontconfig' 'openjpeg2' 'gtk3' 'pkgconfig' 'lcms2' 
+             'gobject-introspection' 'icu' 'qt5-base' 'qt6-base' 'git' 'nss' 'gtk-doc' 'curl' 'poppler-data'
              'cmake' 'python' 'boost')
-makedepends_powerpc=('qt5-base' 'qt6-base' 'gtk3')
-makedepends_powerpc64le=('qt5-base' 'qt6-base' 'gtk3')
-makedepends_x86_64=('qt5-base' 'qt6-base' 'gtk3')
 options=('!emptydirs')
 url="https://poppler.freedesktop.org/"
 # https://gitlab.freedesktop.org/poppler/poppler
 source=(https://poppler.freedesktop.org/${pkgbase}-${pkgver}.tar.xz{,.sig}
         test::git+https://anongit.freedesktop.org/git/poppler/test/#commit=466b4e791dc02ede85898124a99024264f2290d5)
-sha256sums=('31b76b5cac0a48612fdd154c02d9eca01fd38fb8eaa77c1196840ecdeb53a584'
+sha256sums=('7d3493056b5b86413e5c693c2cae02c5c06cd8e618d14c2c31e2c84b67b2313e'
             'SKIP'
             'SKIP')
 validpgpkeys=('CA262C6C83DE4D2FB28A332A3A6A4DB839EAA6D7') # "Albert Astals Cid <aacid@kde.org>"
