--- a/openvr/PKGBUILD
+++ b/openvr/PKGBUILD
@@ -4,9 +4,9 @@
 
 pkgname=openvr
 pkgver=1.16.8
-pkgrel=1
+pkgrel=2
 pkgdesc="API and runtime that allows access to VR hardware from multiple vendors"
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://github.com/ValveSoftware/openvr"
 license=(custom)
 depends=(jsoncpp libgl)
