--- a/laszip2/PKGBUILD
+++ b/laszip2/PKGBUILD
@@ -8,7 +8,7 @@ pkgname=laszip2
 pkgver=2.2.0
 pkgrel=1
 pkgdesc="ASPRS LAS lossless compression library — version 2"
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://laszip.org"
 license=(LGPL)
 depends=(gcc-libs)
@@ -17,7 +17,7 @@ sha512sums=('da523243b93296e308eff9121adf9c2a917fc934b21a92a64d192aaa5a1dfbfeded
 
 build() {
   cd ${pkgname%2}-src-${pkgver}
-  ./configure --prefix=/usr --libdir=/usr/lib/${pkgname} --includedir=/usr/include/${pkgname}
+  ./configure --prefix=/usr --libdir=/usr/lib/${pkgname} --includedir=/usr/include/${pkgname} --build=${CHOST}
   make
 }
 
