--- a/libharu/PKGBUILD
+++ b/libharu/PKGBUILD
@@ -7,7 +7,7 @@ pkgname=libharu
 pkgver=2.3.0
 pkgrel=5
 pkgdesc="C library for generating PDF documents"
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://github.com/libharu/libharu"
 license=(custom:ZLIB)
 depends=(libpng zlib)
