--- a/liblas/PKGBUILD
+++ b/liblas/PKGBUILD
@@ -3,9 +3,9 @@
 
 pkgname=liblas
 pkgver=1.8.1.r120+ge12742f4
-pkgrel=6
+pkgrel=8
 pkgdesc="C/C++ library for reading and writing the very common LAS LiDAR format"
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://liblas.org/"
 license=(BSD)
 depends=(boost-libs gdal laszip2 libgeotiff proj)
@@ -19,7 +19,7 @@ sha256sums=(SKIP c492dd229664c0f1be1a7ca7a7e2df0414a04e2ac89dc5b5ce61463fbe84a6a
 
 pkgver() {
   cd libLAS
-  git describe --tags | sed 's/^mfoc-//;s/\([^-]*-g\)/r\1/;s/-/./;s/-/+/'
+  git describe --tags | sed 's/\([^-]*-g\)/r\1/;s/-/./;s/-/+/'
 }
 
 prepare() {
