--- a/pdal/PKGBUILD
+++ b/pdal/PKGBUILD
@@ -1,11 +1,11 @@
 # POWER Maintainer: Alexander Baldeck <alex.bldck@gmail.com>
-# Maintainer: Sven-Hendrik Haase <svenstaro@gmail.com>
+# Maintainer: Sven-Hendrik Haase <svenstaro@archlinux.org>
 # Contributor: SaultDon <sault.don gmail>
 pkgname=pdal
 pkgver=2.3.0
-pkgrel=3
+pkgrel=5
 pkgdesc="A C++ library for translating and manipulating point cloud data"
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url="http://www.pdal.io"
 license=('BSD')
 depends=('gdal' 'libgeotiff' 'laszip' 'jsoncpp' 'hexer-hobu' 'libunwind' 'laz-perf')
@@ -16,6 +16,11 @@ optdepends=('python-numpy: for the Python plugin'
 provides=('pdal')
 source=("https://github.com/PDAL/PDAL/releases/download/${pkgver}/PDAL-${pkgver}-src.tar.gz")
 sha512sums=('9de87de7370175e76b95d3ec08667eb28b90a63eed8133f144427ff931e575d1f37aa13496f12054577539ee552458475dd054bcbdedfabe52eb0e32c4483d05')
+
+prepare() {
+    cd "PDAL-$pkgver-src/"
+    sed -i "s/LAZPERF 2.0/LAZPERF 3.0/" cmake/lazperf.cmake
+}
 
 build() {
     cd "PDAL-$pkgver-src/"
