--- a/tbb/PKGBUILD
+++ b/tbb/PKGBUILD
@@ -6,8 +6,8 @@
 # Contributor: Bogdan Burlacu <bogdan.burlacu AT pm.me>
 
 pkgname=tbb
-pkgver=2021.4.0
-pkgrel=2.1
+pkgver=2021.5.0
+pkgrel=1
 pkgdesc='High level abstract threading library'
 arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://www.threadingbuildingblocks.org/'
@@ -18,25 +18,28 @@ conflicts=('intel-tbb')
 provides=("intel-tbb=$pkgver")
 replaces=('intel-tbb')
 source=(https://github.com/oneapi-src/oneTBB/archive/v$pkgver/$pkgname-$pkgver.tar.gz
-        tbb-ppc-atomic.patch)
-sha512sums=('96da2bc351fd64dfa854f8e6cabc1c4e53af3d55760e99d6f83ad53779c727af333d13d6be0828ed70371cf796498d2063e9dd0e4b2f6451623bb5d28ccbf20b'
-            '7287d7d09e3a00c0ac03a5caab4e7580756aa5737ece40b6fcc21379efdb5bcce007e7a16f40d012312396ef02e6c1f09f98e69fb0d0767f47423a1aeddb6e7f')
+        tbb-ppc-atomic.patch
+        tbb-2021.4.0-lto.patch)
+sha512sums=('0e7b71022e397a6d7abb0cea106847935ae79a1e12a6976f8d038668c6eca8775ed971202c5bd518f7e517092b67af805cc5feb04b5c3a40e9fbf972cc703a46'
+            '7287d7d09e3a00c0ac03a5caab4e7580756aa5737ece40b6fcc21379efdb5bcce007e7a16f40d012312396ef02e6c1f09f98e69fb0d0767f47423a1aeddb6e7f'
+	    'd65c84a3246dcf5a7c799fd87566834842adfd104bca2c0b0cbd9e2dcae0b900a189154ca9d9c95351c32ff9014cee15f0eb924228e486b58fdcfc624b12d46b')
 
 prepare() {
-  patch -d oneTBB-$pkgver -p1 < tbb-ppc-atomic.patch
+  cd ${srcdir}/oneTBB-${pkgver}
+  patch -Np1 -i ${srcdir}/tbb-ppc-atomic.patch
+  patch -Np1 -i ${srcdir}/tbb-2021.4.0-lto.patch
 }
 
 build() {
   cd oneTBB-$pkgver
 
   case "${CARCH}" in
-    powerpc) EXTRA_CMAKE_FLAGS='-DCMAKE_CXX_FLAGS="-latomic" -DTBB_STRICT=OFF' ;;
+    powerpc|riscv64) EXTRA_CMAKE_FLAGS='-DCMAKE_CXX_FLAGS="-latomic" -DTBB_STRICT=OFF' ;;
     powerpc64le) EXTRA_CMAKE_FLAGS="-DTBB_STRICT=OFF" ;;
-    x86_64) EXTRA_CMAKE_FLAGS="-DTBB4PY_BUILD=ON" ;;
   esac
 
-  cmake -GNinja -DCMAKE_INSTALL_PREFIX=/usr ${EXTRA_CMAKE_FLAGS} .
-  ninja
+  cmake -GNinja -DCMAKE_INSTALL_PREFIX=/usr -DTBB4PY_BUILD=ON -DTBB_ENABLE_IPO=OFF ${EXTRA_CMAKE_FLAGS} .
+  ninja all python_build
 }
 
 package() {
