--- a/fmt/PKGBUILD
+++ b/fmt/PKGBUILD
@@ -3,10 +3,10 @@
 # Contributor: Mihai Bişog <mihai.bisog@gmail.com>
 
 pkgname=fmt
-pkgver=8.0.1
+pkgver=8.1.1
 pkgrel=1
 pkgdesc='Open-source formatting library for C++'
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url=https://fmt.dev
 license=(BSD)
 depends=(gcc-libs)
@@ -22,18 +22,15 @@ makedepends_powerpc=(nodejs-lts-dubnium)
 makedepends_powerpc64le=(nodejs)
 makedepends_x86_64=(npm)
 provides=(libfmt.so)
-_commit=d141cdbeb0fb422a3fb7173b285fd38e0d1772dc
-source=(git+https://github.com/fmtlib/fmt.git#commit=${_commit})
-b2sums=('SKIP')
+_tag=b6f4ceaed0a0a24ccf575fab6c56dd50ccf6f1a9
+source=(git+https://github.com/fmtlib/fmt.git#tag=${_tag})
+b2sums=(SKIP)
 
 prepare() {
-  pushd fmt
-  # https://github.com/fmtlib/fmt/pull/2376
-  git cherry-pick -n c9a10631cb3a656b0a0a3ba3cf0ef7ea541df30f
-  popd
-
-  npm install less less-plugin-clean-css
-  sed "s/'lessc',/'npx', 'lessc',/" -i fmt/doc/build.py
+  if [ "${CARCH}" != 'riscv64' ]; then
+    npm install less less-plugin-clean-css
+    sed "s/'lessc',/'npx', 'lessc',/" -i fmt/doc/build.py
+  fi
 }
 
 pkgver() {
@@ -46,9 +43,11 @@ build() {
     -DCMAKE_BUILD_TYPE=None \
     -DCMAKE_INSTALL_PREFIX=/usr \
     -DCMAKE_INSTALL_LIBDIR=/usr/lib \
-    -DBUILD_SHARED_LIBS=1
+    -DBUILD_SHARED_LIBS=ON
   cmake --build build
-  cmake --build build --target doc
+  set -x
+  [ "${CARCH}" != 'riscv64' ] && cmake --build build --target doc
+  set +x
 }
 
 check() {
@@ -57,7 +56,7 @@ check() {
 
 package() {
   DESTDIR="${pkgdir}" cmake --build build --target install
-  install -Dm 644 fmt/LICENSE.rst -t "${pkgdir}"/usr/share/licenses/fmt
+  install -Dm 644 fmt/LICENSE.rst -t "${pkgdir}"/usr/share/licenses/fmt/
 }
 
 # vim: ts=2 sw=2 et:
