--- a/libtorrent-rasterbar/PKGBUILD
+++ b/libtorrent-rasterbar/PKGBUILD
@@ -4,21 +4,25 @@
 # Contributor: Hugo Doria <hugo@archlinux.org>
 
 pkgname=libtorrent-rasterbar
-pkgver=1.2.14
+pkgver=2.0.5
 pkgrel=1
 epoch=1
 pkgdesc="A C++ BitTorrent library that aims to be a good alternative to all the other implementations around"
 url="https://www.rasterbar.com/products/libtorrent/"
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 license=('BSD')
 depends=('boost-libs' 'openssl')
 makedepends=('boost' 'cmake' 'ninja' 'python-setuptools')
 options=('!emptydirs')
-source=(https://github.com/arvidn/libtorrent/releases/download/v$pkgver/$pkgname-$pkgver.tar.gz)
-sha512sums=('9d23184785597a11f96e9d68ac7bd2ba73a9dbc0568c3fd81ba2f1ef2381f6ee290b48a77f1db6f7ee82aa1f6640a6a54dbfbfa7b236bb3be8a6e083dce6cd69')
+source=(https://github.com/arvidn/libtorrent/releases/download/v$pkgver/$pkgname-$pkgver.tar.gz
+        https://github.com/arvidn/libtorrent/commit/71d608fc.patch)
+sha512sums=('be5b812135dada957e565085b5bdda06827c8427f78a4468ef263e1a1e33d3a0bbba7ac27235f0d17ae6087d54311281e3b1975eef81cda514acc8329862dc04'
+            'ba7788c3b66373b0b11c47cd87b91dddad1898e83eef6269b69c6beb27adb0bdf2e9570a1a6ad731dd907f28b15d6739f5a4cb303a1f99bd5ed3b5cd6fc1edf6')
 
 prepare() {
   mkdir -p build
+  cd $pkgname-$pkgver
+  patch -p1 -i ../71d608fc.patch # Fix build with boost 1.78
 }
 
 build() {
