--- a/deluge/PKGBUILD
+++ b/deluge/PKGBUILD
@@ -5,8 +5,9 @@
 
 pkgbase=deluge
 pkgname=(deluge deluge-gtk)
-pkgver=2.0.4.dev56+g2e466101f
+pkgver=2.0.5
 pkgrel=1
+epoch=1
 pkgdesc="BitTorrent client with multiple user interfaces in a client/server model"
 url="https://deluge-torrent.org/"
 arch=(any)
@@ -30,35 +31,31 @@ depends=(
   python-mako
 )
 makedepends=(
+  git
   python-setuptools
   python-wheel
   intltool
+  python-rjsmin
   gtk3
   python-gobject
   python-cairo
   librsvg
   xdg-utils
   libappindicator-gtk3
-  #python-pygame
+  python-pygame
   libnotify
-  git
 )
-_commit=2e466101fc20aa4314049d942d56e2be75fd70ae  # develop
-source=("git://git.deluge-torrent.org/deluge.git#commit=$_commit"
-        user-agent-override.diff)
-sha256sums=('SKIP'
-            '10ed8beaafa4b014162efacfa7c5a2d92ee0260aa03c48764c71de41a48450b3')
+_commit=612e0061ed847dc3436644ef5dbfacaa984c1017  # tags/deluge-2.0.5^0
+source=("git://git.deluge-torrent.org/deluge.git#commit=$_commit")
+sha256sums=('SKIP')
 
 pkgver() {
   cd deluge
-  git describe --tags | sed 's/^deluge-//;s/dev0-/dev/;s/-/+/g'
+  git describe --tags | sed 's/^deluge-//;s/\.dev0-/dev/;s/-/+/g'
 }
 
 prepare() {
   cd deluge
-
-  # Pretend to be stable deluge
-  patch -Np1 -i ../user-agent-override.diff
 }
 
 build() {
@@ -96,13 +93,13 @@ package_deluge() {
 
   _pick gtk usr/bin/deluge-gtk usr/share/man/man1/deluge-gtk.1
   _pick gtk usr/share/{appdata,applications,icons,pixmaps}
-  _pick gtk usr/lib/python3.9/site-packages/deluge/ui/gtk3
+  _pick gtk usr/lib/python3.10/site-packages/deluge/ui/gtk3
 }
 
 package_deluge-gtk() {
   pkgdesc="GTK UI for Deluge"
   depends=(
-    "deluge=$pkgver-$pkgrel"
+    "deluge=$epoch:$pkgver-$pkgrel"
     gtk3
     librsvg
     python-cairo
@@ -111,7 +108,7 @@ package_deluge-gtk() {
   )
   optdepends=(
     'libappindicator-gtk3: appindicator notifications'
-    #'python-pygame: audible notifications'
+    'python-pygame: audible notifications'
     'libnotify: desktop notifications'
   )
   replaces=('deluge<2.0.4.dev23+g2f1c008a2-2')
