--- a/graphviz/PKGBUILD
+++ b/graphviz/PKGBUILD
@@ -4,17 +4,17 @@
 # Contributor: John Proctor <jproctor@prium.net>
 
 pkgname=graphviz
-pkgver=2.49.3
+pkgver=2.50.0
 pkgrel=1
 pkgdesc='Graph visualization software'
 url='https://www.graphviz.org/'
 license=('EPL')
 arch=(x86_64 powerpc64le powerpc riscv64)
 depends=('libltdl' 'gd' 'librsvg' 'libxaw' 'ghostscript' 'pango' 'gts' 'gsfonts' 'libnsl' 'libpng')
-makedepends=('swig' 'guile' 'lua' 'ocaml>=4.12.0' 'perl' 'python' 'tk') #'gtk2')
-makedepends_powerpc=('mono' 'r' 'qt5-base')
-makedepends_powerpc64le=('mono' 'r' 'qt5-base')
-makedepends_x86_64=('mono' 'r' 'qt5-base')
+makedepends=('swig' 'guile' 'lua' 'ocaml>=4.12.0' 'perl' 'python' 'tk' 'r' 'qt5-base') #'gtk2')
+makedepends_powerpc=('mono')
+makedepends_powerpc64le=('mono')
+makedepends_x86_64=('mono')
 optdepends=('mono: sharp bindings'
             'guile: guile bindings'
             'lua: lua bindings'
@@ -28,7 +28,7 @@ optdepends=('mono: sharp bindings'
             'xterm: vimdot')
 source=("https://gitlab.com/graphviz/graphviz/-/archive/$pkgver/$pkgname-$pkgver.tar.gz"
         'ghostscript918.patch')
-sha256sums=('5801664769ab88c2fb8ccb6ab0957cceabe6d4632b193041440e97790f53a9df'
+sha256sums=('afa48581f764a35e148909cc96a0308ec2356b5225b64af12492f3392f20ef1c'
             '0083d126e27f2223ec4226fc1d71c9c84106968a0fdf65de838aee1e4882bfdb')
 
 install=install
