--- a/libteam/PKGBUILD
+++ b/libteam/PKGBUILD
@@ -3,9 +3,9 @@
 
 pkgname=libteam
 pkgver=1.31
-pkgrel=3
+pkgrel=5
 pkgdesc="Library for controlling team network device"
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url="http://libteam.org/"
 license=(LGPL)
 depends=(libnl libdaemon jansson libdbus bash zeromq)
