--- a/libimobiledevice/PKGBUILD
+++ b/libimobiledevice/PKGBUILD
@@ -5,10 +5,10 @@
 
 pkgname=libimobiledevice
 pkgver=1.3.0
-pkgrel=3
+pkgrel=5
 pkgdesc="Library that talks the protocols to support iPhone and iPod Touch devices on Linux"
 url="https://libimobiledevice.org/"
-arch=( x86_64 powerpc64le powerpc )
+arch=(x86_64 powerpc64le powerpc riscv64)
 license=('GPL2' 'LGPL2.1')
 depends=('libusbmuxd' 'usbmuxd' 'gnutls')
 makedepends=('python' 'cython' 'libplist' 'autoconf-archive'
