--- a/inkscape/PKGBUILD
+++ b/inkscape/PKGBUILD
@@ -4,9 +4,9 @@
 # Contributor: tobias <tobias@archlinux.org>
 
 pkgname=inkscape
-pkgver=1.1
-_tag=a5140d78520f85e96ccb9a0cacc0df79167f1473 # git rev-parse INKSCAPE_${pkgver/./_}
-pkgrel=5
+pkgver=1.1.1
+_tag='3bf5ae0d25c673abe152dedf4789a2d6f0cc60ff' # git rev-parse INKSCAPE_${pkgver/./_}
+pkgrel=7
 pkgdesc='Professional vector graphics editor'
 url='https://inkscape.org/'
 license=('GPL' 'LGPL')
@@ -47,10 +47,24 @@ optdepends=(
 source=("git+https://gitlab.com/inkscape/inkscape.git#tag=${_tag}")
 sha256sums=('SKIP')
 
+_backports=(
+  # Fix build with poppler 21.11.0
+  '5724c21b9cb7b6176a7b36ca24068b148c817e82'
+
+  # Remove mandatory break from end of paragraphs, added in Pango 1.49.
+  'b3dabef2245d4e4e977ee9d6776be9a134493515'
+)
+
 prepare() {
 	cd "${pkgname}"
 	git submodule init
 	git submodule update
+
+	local _c
+	for _c in "${_backports[@]}"; do
+		git log --oneline -1 "${_c}"
+		git cherry-pick -n "${_c}"
+	done
 }
 
 build() {
