--- a/qt5/qt5-quickcontrols2/PKGBUILD
+++ b/qt5/qt5-quickcontrols2/PKGBUILD
@@ -3,10 +3,10 @@
 # Contributor: Andrea Scarpino <andrea@archlinux.org>
 
 pkgname=qt5-quickcontrols2
-pkgver=5.15.2+kde+r8
+pkgver=5.15.2+kde+r10
 pkgrel=1
-_commit=be66bf9a5618c745d2a6ee2262967af6307b3b07
-arch=(x86_64 powerpc64le powerpc)
+_commit=b092b19a18d14e70beae6afebc6bde5d83e9eed7
+arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://www.qt.io'
 license=('GPL3' 'LGPL3' 'FDL' 'custom')
 pkgdesc='Next generation user interface controls based on Qt Quick'
